data/issues_nolabel/nolabel_test_15196.txt
[XLA] OSX tfcompile compile failure in ../llvm_ir/kernel_support_library.cc

System information

Have I written custom code (as opposed to using a stock example script provided in TensorFlow): No
OS Platform and Distribution (e.g., Linux Ubuntu 16.04): OSX 10.13.2
TensorFlow installed from (source or binary): Source
TensorFlow version (use command below): Top of Master (34bcd09)
Python version:
Bazel version (if compiling from source):   0.7.0
GCC/Compiler version (if compiling from source): Apple LLVM version 9.0.0 (clang-900.0.39.2)
CUDA/cuDNN version: N/A
GPU model and memory: N/A
Exact command to reproduce:

bazel build tensorflow/compiler/aot/tfcompile
Describe the problem
Compiler error when compiling tfcompile on OSX. This was introduced by @sanjoy  Commit:
c572bc4
You will need this PR to be able to fix other compile issues on OSX. #14893
ERROR: /Users/tfninja/github/tensorflow/tensorflow/compiler/xla/service/llvm_ir/BUILD:171:1: C++ compilation of rule '//tensorflow/compiler/xla/service/llvm_ir:kernel_support_library' failed (Exit 1).
tensorflow/compiler/xla/service/llvm_ir/kernel_support_library.cc:99:5: error: no matching function for call to 'transform'
std::transform(function->arg_begin(), function->arg_end(),
^~~~~~~~~~~~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/algorithm:1922:1: note: candidate template ignored: couldn't infer template argument '_UnaryOperation'
transform(_InputIterator __first, _InputIterator __last, _OutputIterator __result, _UnaryOperation __op)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/algorithm:1932:1: note: candidate function template not viable: requires 5 arguments, but 4 were provided
transform(_InputIterator1 __first1, _InputIterator1 __last1, _InputIterator2 __first2,
^
1 error generated.
Target //tensorflow/compiler/aot:tfcompile failed to build
Source code / logs
The issue seems to be with this line of code in which works on Linux but fails on OSX/Clang tensorflow/compiler/xla/service/llvm_ir/kernel_support_library.cc
+    std::transform(function->arg_begin(), function->arg_end(),
+                   std::back_inserter(arg_values), std::addressof<llvm::Value>);